// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateField matches wrappersnapshot: wrapper mount 1`] = `
.emotion-74 {
  margin-bottom: 20px;
}

@media only screen and (min-width:641px) {
  .emotion-74 {
    margin-bottom: 30px;
  }
}

.emotion-72 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-left: 4px solid #b10e1e;
  margin-right: 15px;
  padding-left: 10px;
  margin-bottom: 20px;
}

@media only screen and (min-width:641px) {
  .emotion-72 {
    margin-bottom: 30px;
  }
}

.emotion-3 {
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-3 {
    margin-bottom: 0;
  }
}

.emotion-1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: block;
  clear: none;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  padding-bottom: 2px;
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    font-size: 19px;
    line-height: 1.3;
  }
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    margin-bottom: 0;
  }
}

.emotion-8 {
  display: block;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 700;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  color: #b10e1e;
  padding-top: 4px;
  padding-bottom: 2px;
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-8 {
    font-size: 19px;
    line-height: 1.3;
  }
}

@media only screen and (min-width:641px) {
  .emotion-8 {
    margin-bottom: 0;
  }
}

.emotion-69 {
  font-family: "nta",Arial,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-33 {
  margin-bottom: 0;
  margin-right: 20px;
  margin-bottom: 0;
  width: 50px;
}

@media only screen and (min-width:641px) {
  .emotion-33 {
    margin-bottom: 0;
  }
}

.emotion-31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  margin-bottom: 0;
  margin-right: 20px;
  margin-bottom: 0;
  width: 50px;
}

.emotion-31:after {
  content: '';
  display: table;
  clear: both;
}

@media only screen and (min-width:641px) {
  .emotion-31 {
    margin-bottom: 0;
  }
}

.emotion-28 {
  box-sizing: border-box;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  width: 100%;
  padding: 5px 4px 4px;
  border: 2px solid #0b0c0c;
  border: 4px solid #b10e1e;
}

@media only screen and (min-width:641px) {
  .emotion-28 {
    font-size: 19px;
    line-height: 1.3;
  }
}

.emotion-28:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
}

.emotion-65 {
  margin-bottom: 0;
  margin-right: 20px;
  margin-bottom: 0;
  width: 70px;
}

@media only screen and (min-width:641px) {
  .emotion-65 {
    margin-bottom: 0;
  }
}

.emotion-63 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  margin-bottom: 0;
  margin-right: 20px;
  margin-bottom: 0;
  width: 70px;
}

.emotion-63:after {
  content: '';
  display: table;
  clear: both;
}

@media only screen and (min-width:641px) {
  .emotion-63 {
    margin-bottom: 0;
  }
}

<StyledHoc
  errorText="example"
>
  <DateField
    className="emotion-74 emotion-0"
    defaultValues={
      Object {
        "day": undefined,
        "month": undefined,
        "year": undefined,
      }
    }
    errorText="example"
    inputNames={
      Object {
        "day": undefined,
        "month": undefined,
        "year": undefined,
      }
    }
  >
    <StyledContainer
      className="emotion-74 emotion-0"
      errorText="example"
    >
      <div
        className="emotion-0 emotion-72 emotion-73"
      >
        <StyledHoc
          errorText="example"
        >
          <LabelText
            className="emotion-3 emotion-0"
            errorText="example"
          >
            <StyledLabelText
              className="emotion-3 emotion-0"
              errorText="example"
            >
              <span
                className="emotion-0 emotion-1 emotion-2"
              >
                example
              </span>
            </StyledLabelText>
          </LabelText>
        </StyledHoc>
        <span />
        <StyledHoc
          errorText="example"
        >
          <ErrorText
            className="emotion-3 emotion-0"
            errorText="example"
          >
            <StyledError
              className="emotion-3 emotion-0"
              errorText="example"
            >
              <span
                className="emotion-0 emotion-8 emotion-2"
              >
                example
              </span>
            </StyledError>
          </ErrorText>
        </StyledHoc>
        <StyledHoc
          errorText="example"
        >
          <ErrorText
            className="emotion-3 emotion-0"
            errorText="example"
          >
            <StyledError
              className="emotion-3 emotion-0"
              errorText="example"
            >
              <span
                className="emotion-0 emotion-8 emotion-2"
              >
                example
              </span>
            </StyledError>
          </ErrorText>
        </StyledHoc>
        <MultiInputInput
          defaultValues={
            Object {
              "day": undefined,
              "month": undefined,
              "year": undefined,
            }
          }
          error={true}
          names={
            Object {
              "day": undefined,
              "month": undefined,
              "year": undefined,
            }
          }
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          value={Object {}}
        >
          <OptionalDateField
            defaultValues={
              Object {
                "day": undefined,
                "month": undefined,
                "year": undefined,
              }
            }
            error={true}
            labels={
              Object {
                "day": "Day",
                "month": "Month",
                "year": "Year",
              }
            }
            names={
              Object {
                "day": undefined,
                "month": undefined,
                "year": undefined,
              }
            }
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            refs={[Function]}
            value={Object {}}
          >
            <StyledList>
              <div
                className="emotion-69 emotion-70"
              >
                <StyledLabel
                  year={false}
                >
                  <Label
                    className="emotion-33 emotion-30"
                    year={false}
                  >
                    <StyledLabel
                      className="emotion-33 emotion-30"
                      year={false}
                    >
                      <label
                        className="emotion-30 emotion-31 emotion-2"
                      >
                        <StyledHoc>
                          <LabelText
                            className="emotion-3 emotion-0"
                          >
                            <StyledLabelText
                              className="emotion-3 emotion-0"
                            >
                              <span
                                className="emotion-0 emotion-1 emotion-2"
                              >
                                Day
                              </span>
                            </StyledLabelText>
                          </LabelText>
                        </StyledHoc>
                        <StyledInput
                          error={true}
                          innerRef={[Function]}
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="number"
                        >
                          <input
                            className="emotion-28 emotion-29"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            type="number"
                          />
                        </StyledInput>
                      </label>
                    </StyledLabel>
                  </Label>
                </StyledLabel>
                <StyledLabel
                  year={false}
                >
                  <Label
                    className="emotion-33 emotion-30"
                    year={false}
                  >
                    <StyledLabel
                      className="emotion-33 emotion-30"
                      year={false}
                    >
                      <label
                        className="emotion-30 emotion-31 emotion-2"
                      >
                        <StyledHoc>
                          <LabelText
                            className="emotion-3 emotion-0"
                          >
                            <StyledLabelText
                              className="emotion-3 emotion-0"
                            >
                              <span
                                className="emotion-0 emotion-1 emotion-2"
                              >
                                Month
                              </span>
                            </StyledLabelText>
                          </LabelText>
                        </StyledHoc>
                        <StyledInput
                          error={true}
                          innerRef={[Function]}
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="number"
                        >
                          <input
                            className="emotion-28 emotion-29"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            type="number"
                          />
                        </StyledInput>
                      </label>
                    </StyledLabel>
                  </Label>
                </StyledLabel>
                <StyledLabel
                  year={true}
                >
                  <Label
                    className="emotion-65 emotion-30"
                    year={true}
                  >
                    <StyledLabel
                      className="emotion-65 emotion-30"
                      year={true}
                    >
                      <label
                        className="emotion-30 emotion-63 emotion-2"
                      >
                        <StyledHoc>
                          <LabelText
                            className="emotion-3 emotion-0"
                          >
                            <StyledLabelText
                              className="emotion-3 emotion-0"
                            >
                              <span
                                className="emotion-0 emotion-1 emotion-2"
                              >
                                Year
                              </span>
                            </StyledLabelText>
                          </LabelText>
                        </StyledHoc>
                        <StyledInput
                          error={true}
                          innerRef={[Function]}
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="number"
                        >
                          <input
                            className="emotion-28 emotion-29"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            type="number"
                          />
                        </StyledInput>
                      </label>
                    </StyledLabel>
                  </Label>
                </StyledLabel>
              </div>
            </StyledList>
          </OptionalDateField>
        </MultiInputInput>
      </div>
    </StyledContainer>
  </DateField>
</StyledHoc>
`;

exports[`DateField should support null value: null value 1`] = `
.emotion-60 {
  margin-bottom: 20px;
}

@media only screen and (min-width:641px) {
  .emotion-60 {
    margin-bottom: 30px;
  }
}

.emotion-3 {
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-3 {
    margin-bottom: 0;
  }
}

.emotion-1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: block;
  clear: none;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  padding-bottom: 2px;
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    font-size: 19px;
    line-height: 1.3;
  }
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    margin-bottom: 0;
  }
}

.emotion-55 {
  font-family: "nta",Arial,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-19 {
  margin-bottom: 0;
  margin-right: 20px;
  margin-bottom: 0;
  width: 50px;
}

@media only screen and (min-width:641px) {
  .emotion-19 {
    margin-bottom: 0;
  }
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  margin-bottom: 0;
  margin-right: 20px;
  margin-bottom: 0;
  width: 50px;
}

.emotion-17:after {
  content: '';
  display: table;
  clear: both;
}

@media only screen and (min-width:641px) {
  .emotion-17 {
    margin-bottom: 0;
  }
}

.emotion-51 {
  margin-bottom: 0;
  margin-right: 20px;
  margin-bottom: 0;
  width: 70px;
}

@media only screen and (min-width:641px) {
  .emotion-51 {
    margin-bottom: 0;
  }
}

.emotion-49 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  margin-bottom: 0;
  margin-right: 20px;
  margin-bottom: 0;
  width: 70px;
}

.emotion-49:after {
  content: '';
  display: table;
  clear: both;
}

@media only screen and (min-width:641px) {
  .emotion-49 {
    margin-bottom: 0;
  }
}

.emotion-58 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 20px;
}

@media only screen and (min-width:641px) {
  .emotion-58 {
    margin-bottom: 30px;
  }
}

.emotion-14 {
  box-sizing: border-box;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  width: 100%;
  padding: 5px 4px 4px;
  border: 2px solid #0b0c0c;
  border: 2px solid #0b0c0c;
}

@media only screen and (min-width:641px) {
  .emotion-14 {
    font-size: 19px;
    line-height: 1.3;
  }
}

.emotion-14:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
}

<StyledHoc
  input={
    Object {
      "value": null,
    }
  }
>
  <DateField
    className="emotion-60 emotion-0"
    defaultValues={
      Object {
        "day": undefined,
        "month": undefined,
        "year": undefined,
      }
    }
    input={
      Object {
        "value": null,
      }
    }
    inputNames={
      Object {
        "day": undefined,
        "month": undefined,
        "year": undefined,
      }
    }
  >
    <StyledContainer
      className="emotion-60 emotion-0"
    >
      <div
        className="emotion-0 emotion-58 emotion-59"
      >
        <StyledHoc>
          <LabelText
            className="emotion-3 emotion-0"
          >
            <StyledLabelText
              className="emotion-3 emotion-0"
            >
              <span
                className="emotion-0 emotion-1 emotion-2"
              />
            </StyledLabelText>
          </LabelText>
        </StyledHoc>
        <span />
        <span />
        <MultiInputInput
          defaultValues={
            Object {
              "day": undefined,
              "month": undefined,
              "year": undefined,
            }
          }
          error={false}
          names={
            Object {
              "day": undefined,
              "month": undefined,
              "year": undefined,
            }
          }
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          value={null}
        >
          <OptionalDateField
            defaultValues={
              Object {
                "day": undefined,
                "month": undefined,
                "year": undefined,
              }
            }
            error={false}
            labels={
              Object {
                "day": "Day",
                "month": "Month",
                "year": "Year",
              }
            }
            names={
              Object {
                "day": undefined,
                "month": undefined,
                "year": undefined,
              }
            }
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            refs={[Function]}
            value={null}
          >
            <StyledList>
              <div
                className="emotion-55 emotion-56"
              >
                <StyledLabel
                  year={false}
                >
                  <Label
                    className="emotion-19 emotion-16"
                    year={false}
                  >
                    <StyledLabel
                      className="emotion-19 emotion-16"
                      year={false}
                    >
                      <label
                        className="emotion-16 emotion-17 emotion-2"
                      >
                        <StyledHoc>
                          <LabelText
                            className="emotion-3 emotion-0"
                          >
                            <StyledLabelText
                              className="emotion-3 emotion-0"
                            >
                              <span
                                className="emotion-0 emotion-1 emotion-2"
                              >
                                Day
                              </span>
                            </StyledLabelText>
                          </LabelText>
                        </StyledHoc>
                        <StyledInput
                          error={false}
                          innerRef={[Function]}
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="number"
                        >
                          <input
                            className="emotion-14 emotion-15"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            type="number"
                          />
                        </StyledInput>
                      </label>
                    </StyledLabel>
                  </Label>
                </StyledLabel>
                <StyledLabel
                  year={false}
                >
                  <Label
                    className="emotion-19 emotion-16"
                    year={false}
                  >
                    <StyledLabel
                      className="emotion-19 emotion-16"
                      year={false}
                    >
                      <label
                        className="emotion-16 emotion-17 emotion-2"
                      >
                        <StyledHoc>
                          <LabelText
                            className="emotion-3 emotion-0"
                          >
                            <StyledLabelText
                              className="emotion-3 emotion-0"
                            >
                              <span
                                className="emotion-0 emotion-1 emotion-2"
                              >
                                Month
                              </span>
                            </StyledLabelText>
                          </LabelText>
                        </StyledHoc>
                        <StyledInput
                          error={false}
                          innerRef={[Function]}
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="number"
                        >
                          <input
                            className="emotion-14 emotion-15"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            type="number"
                          />
                        </StyledInput>
                      </label>
                    </StyledLabel>
                  </Label>
                </StyledLabel>
                <StyledLabel
                  year={true}
                >
                  <Label
                    className="emotion-51 emotion-16"
                    year={true}
                  >
                    <StyledLabel
                      className="emotion-51 emotion-16"
                      year={true}
                    >
                      <label
                        className="emotion-16 emotion-49 emotion-2"
                      >
                        <StyledHoc>
                          <LabelText
                            className="emotion-3 emotion-0"
                          >
                            <StyledLabelText
                              className="emotion-3 emotion-0"
                            >
                              <span
                                className="emotion-0 emotion-1 emotion-2"
                              >
                                Year
                              </span>
                            </StyledLabelText>
                          </LabelText>
                        </StyledHoc>
                        <StyledInput
                          error={false}
                          innerRef={[Function]}
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="number"
                        >
                          <input
                            className="emotion-14 emotion-15"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            type="number"
                          />
                        </StyledInput>
                      </label>
                    </StyledLabel>
                  </Label>
                </StyledLabel>
              </div>
            </StyledList>
          </OptionalDateField>
        </MultiInputInput>
      </div>
    </StyledContainer>
  </DateField>
</StyledHoc>
`;

exports[`DateField should support setting value: value 1 2 3 1`] = `
.emotion-60 {
  margin-bottom: 20px;
}

@media only screen and (min-width:641px) {
  .emotion-60 {
    margin-bottom: 30px;
  }
}

.emotion-3 {
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-3 {
    margin-bottom: 0;
  }
}

.emotion-1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: block;
  clear: none;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  padding-bottom: 2px;
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    font-size: 19px;
    line-height: 1.3;
  }
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    margin-bottom: 0;
  }
}

.emotion-55 {
  font-family: "nta",Arial,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-19 {
  margin-bottom: 0;
  margin-right: 20px;
  margin-bottom: 0;
  width: 50px;
}

@media only screen and (min-width:641px) {
  .emotion-19 {
    margin-bottom: 0;
  }
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  margin-bottom: 0;
  margin-right: 20px;
  margin-bottom: 0;
  width: 50px;
}

.emotion-17:after {
  content: '';
  display: table;
  clear: both;
}

@media only screen and (min-width:641px) {
  .emotion-17 {
    margin-bottom: 0;
  }
}

.emotion-51 {
  margin-bottom: 0;
  margin-right: 20px;
  margin-bottom: 0;
  width: 70px;
}

@media only screen and (min-width:641px) {
  .emotion-51 {
    margin-bottom: 0;
  }
}

.emotion-49 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  margin-bottom: 0;
  margin-right: 20px;
  margin-bottom: 0;
  width: 70px;
}

.emotion-49:after {
  content: '';
  display: table;
  clear: both;
}

@media only screen and (min-width:641px) {
  .emotion-49 {
    margin-bottom: 0;
  }
}

.emotion-58 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 20px;
}

@media only screen and (min-width:641px) {
  .emotion-58 {
    margin-bottom: 30px;
  }
}

.emotion-14 {
  box-sizing: border-box;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  width: 100%;
  padding: 5px 4px 4px;
  border: 2px solid #0b0c0c;
  border: 2px solid #0b0c0c;
}

@media only screen and (min-width:641px) {
  .emotion-14 {
    font-size: 19px;
    line-height: 1.3;
  }
}

.emotion-14:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
}

<StyledHoc
  input={
    Object {
      "value": Object {
        "day": "1",
        "month": "2",
        "year": "3",
      },
    }
  }
>
  <DateField
    className="emotion-60 emotion-0"
    defaultValues={
      Object {
        "day": undefined,
        "month": undefined,
        "year": undefined,
      }
    }
    input={
      Object {
        "value": Object {
          "day": "1",
          "month": "2",
          "year": "3",
        },
      }
    }
    inputNames={
      Object {
        "day": undefined,
        "month": undefined,
        "year": undefined,
      }
    }
  >
    <StyledContainer
      className="emotion-60 emotion-0"
    >
      <div
        className="emotion-0 emotion-58 emotion-59"
      >
        <StyledHoc>
          <LabelText
            className="emotion-3 emotion-0"
          >
            <StyledLabelText
              className="emotion-3 emotion-0"
            >
              <span
                className="emotion-0 emotion-1 emotion-2"
              />
            </StyledLabelText>
          </LabelText>
        </StyledHoc>
        <span />
        <span />
        <MultiInputInput
          defaultValues={
            Object {
              "day": undefined,
              "month": undefined,
              "year": undefined,
            }
          }
          error={false}
          names={
            Object {
              "day": undefined,
              "month": undefined,
              "year": undefined,
            }
          }
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          value={
            Object {
              "day": "1",
              "month": "2",
              "year": "3",
            }
          }
        >
          <OptionalDateField
            defaultValues={
              Object {
                "day": undefined,
                "month": undefined,
                "year": undefined,
              }
            }
            error={false}
            labels={
              Object {
                "day": "Day",
                "month": "Month",
                "year": "Year",
              }
            }
            names={
              Object {
                "day": undefined,
                "month": undefined,
                "year": undefined,
              }
            }
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            refs={[Function]}
            value={
              Object {
                "day": "1",
                "month": "2",
                "year": "3",
              }
            }
          >
            <StyledList>
              <div
                className="emotion-55 emotion-56"
              >
                <StyledLabel
                  year={false}
                >
                  <Label
                    className="emotion-19 emotion-16"
                    year={false}
                  >
                    <StyledLabel
                      className="emotion-19 emotion-16"
                      year={false}
                    >
                      <label
                        className="emotion-16 emotion-17 emotion-2"
                      >
                        <StyledHoc>
                          <LabelText
                            className="emotion-3 emotion-0"
                          >
                            <StyledLabelText
                              className="emotion-3 emotion-0"
                            >
                              <span
                                className="emotion-0 emotion-1 emotion-2"
                              >
                                Day
                              </span>
                            </StyledLabelText>
                          </LabelText>
                        </StyledHoc>
                        <StyledInput
                          error={false}
                          innerRef={[Function]}
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="number"
                          value="1"
                        >
                          <input
                            className="emotion-14 emotion-15"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            type="number"
                            value="1"
                          />
                        </StyledInput>
                      </label>
                    </StyledLabel>
                  </Label>
                </StyledLabel>
                <StyledLabel
                  year={false}
                >
                  <Label
                    className="emotion-19 emotion-16"
                    year={false}
                  >
                    <StyledLabel
                      className="emotion-19 emotion-16"
                      year={false}
                    >
                      <label
                        className="emotion-16 emotion-17 emotion-2"
                      >
                        <StyledHoc>
                          <LabelText
                            className="emotion-3 emotion-0"
                          >
                            <StyledLabelText
                              className="emotion-3 emotion-0"
                            >
                              <span
                                className="emotion-0 emotion-1 emotion-2"
                              >
                                Month
                              </span>
                            </StyledLabelText>
                          </LabelText>
                        </StyledHoc>
                        <StyledInput
                          error={false}
                          innerRef={[Function]}
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="number"
                          value="2"
                        >
                          <input
                            className="emotion-14 emotion-15"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            type="number"
                            value="2"
                          />
                        </StyledInput>
                      </label>
                    </StyledLabel>
                  </Label>
                </StyledLabel>
                <StyledLabel
                  year={true}
                >
                  <Label
                    className="emotion-51 emotion-16"
                    year={true}
                  >
                    <StyledLabel
                      className="emotion-51 emotion-16"
                      year={true}
                    >
                      <label
                        className="emotion-16 emotion-49 emotion-2"
                      >
                        <StyledHoc>
                          <LabelText
                            className="emotion-3 emotion-0"
                          >
                            <StyledLabelText
                              className="emotion-3 emotion-0"
                            >
                              <span
                                className="emotion-0 emotion-1 emotion-2"
                              >
                                Year
                              </span>
                            </StyledLabelText>
                          </LabelText>
                        </StyledHoc>
                        <StyledInput
                          error={false}
                          innerRef={[Function]}
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="number"
                          value="3"
                        >
                          <input
                            className="emotion-14 emotion-15"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            type="number"
                            value="3"
                          />
                        </StyledInput>
                      </label>
                    </StyledLabel>
                  </Label>
                </StyledLabel>
              </div>
            </StyledList>
          </OptionalDateField>
        </MultiInputInput>
      </div>
    </StyledContainer>
  </DateField>
</StyledHoc>
`;
